Analysis Module Change Log

======================= Trunk (not yet released) =======================

API Changes

 * LUCENE-2413: Deprecated PatternAnalyzer in common/miscellaneous, in favor 
   of the pattern package (CharFilter, Tokenizer, TokenFilter).  (Robert Muir)

 * LUCENE-2413: Removed the AnalyzerUtil in common/miscellaneous.  (Robert Muir)

 * LUCENE-2167: StandardTokenizer/Analyzer in common/standard/ now implement
   the Word Break rules from the Unicode Text Segmentation algorithm (UAX#29),
   as well as tokenizing URLs and email addresses according to the relevant
   RFCs.  ClassicTokenizer/Analyzer retains the old StandardTokenizer/Analyzer
   behavior.  (Steven Rowe, Robert Muir, Uwe Schindler)

 * LUCENE-2699: Update StandardTokenizer and UAX29Tokenizer to Unicode 6.0.0.
   (Steven Rowe)
   
 * LUCENE-1370: Added ShingleFilter option to output unigrams if no shingles
   can be generated. (Chris Harris via Steven Rowe)
   
New Features
   
 * LUCENE-2413: Consolidated Solr analysis components into common. 
   New features from Solr now available to Lucene users include:
   - o.a.l.analysis.commongrams: Constructs n-grams for frequently occurring terms
     and phrases. 
   - o.a.l.analysis.charfilter.HTMLStripCharFilter: CharFilter that strips HTML 
     constructs.
   - o.a.l.analysis.miscellaneous.WordDelimiterFilter: TokenFilter that splits words 
     into subwords and performs optional transformations on subword groups.
   - o.a.l.analysis.miscellaneous.RemoveDuplicatesTokenFilter: TokenFilter which 
     filters out Tokens at the same position and Term text as the previous token.
   - o.a.l.analysis.miscellaneous.TrimFilter: Trims leading and trailing whitespace 
     from Tokens in the stream.
   - o.a.l.analysis.miscellaneous.KeepWordFilter: A TokenFilter that only keeps tokens 
     with text contained in the required words (inverse of StopFilter).
   - o.a.l.analysis.miscellaneous.HyphenatedWordsFilter: A TokenFilter that puts 